[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Component/ThreeGroupEngineSystem.gd" type="Script" id=1]
[ext_resource path="res://objects/Components/TriggerMultiOutputsSystem.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Component/Base/TriggerOutputMount.gd" type="Script" id=3]

[node name="ThreeGroupEngineSystem" type="Node2D"]
script = ExtResource( 1 )

[node name="ForwardEngineTriggerMount" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="TriggerMultiOutputsSystem" parent="ForwardEngineTriggerMount" instance=ExtResource( 2 )]

[node name="RightSpinEngineTriggerMount" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="TriggerMultiOutputsSystem" parent="RightSpinEngineTriggerMount" instance=ExtResource( 2 )]

[node name="LeftSpinEngineTriggerMount" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="TriggerMultiOutputsSystem" parent="LeftSpinEngineTriggerMount" instance=ExtResource( 2 )]
